# gl-arcanoid-2d

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
src/game/core/: CMakeLists.txt
src/game/core/private/game/: ArcanoidGame.cpp
src/game/core/public/game/: ArcanoidGame.hpp
src/game/windows/: CMakeLists.txt
src/game/windows/private/: main.cpp
src/game/windows/public/: main.hpp
